[19309] - Fixed the mobile search bar appearing briefly on mobile when the page first loads.

--- a/health/sass/components/search/_extends.scss
+++ b/health/sass/components/search/_extends.scss
@@ -75,7 +75,7 @@
 }
 
 // Global search in header
-.js .region-header {
+.region-header {
   div.block-search-api-page {
     display: none; // Hide the search in the header on mobile.
     @include uikit-media(sm) {
